v2 done 部分功能添加完成

--- a/a.html
+++ b/a.html
@@ -8,5 +8,10 @@
   <body></body>
   <script>
     // 哈哈哈哈哈哈哈哈哈哈哈哈
+
+    // ------------Thanks♪(･ω･)ﾉ
+    var a = 20;
+    var b = 50;
+    console.log(a * b);
   </script>
 </html>
