--- a/b.html
+++ b/b.html
@@ -9,5 +9,9 @@
   <script>
     var a = 10;
     console.log(a);
+    // ----------------2
+    var b = a;
+    b++;
+    console.log(b);
   </script>
 </html>
