--- a/a.html
+++ b/a.html
@@ -13,5 +13,10 @@
     var a = 20;
     var b = 50;
     console.log(a * b);
+
+    // ------------3
+    for (var i = 0; i < 10; i++) {
+      console.log(i);
+    }
   </script>
 </html>
