--- a/b.html
+++ b/b.html
@@ -13,5 +13,12 @@
     var b = a;
     b++;
     console.log(b);
+
+    // ----------------3
+    var obj = {
+      hh: a,
+      xx: b,
+    };
+    console.log(obj.hh * obj.xx);
   </script>
 </html>
